--- a/PROJETO-NPJ-FRONT/index.html
+++ b/PROJETO-NPJ-FRONT/index.html
@@ -7,7 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="description" content="">
-  <meta name="author" content="">
+  <meta name="author" content="Giovani Ribeiro">
 
   <title>NPJ - App</title>
 
@@ -64,7 +64,7 @@
         <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionSidebar">
           <div class="bg-white py-2 collapse-inner rounded">
             <h6 class="collapse-header">Processos:</h6>
-            <a class="collapse-item" href="#">Processos</a>
+            <a class="collapse-item" href="cadastro-processos.html">Processos</a>
             <a class="collapse-item" href="#">Clientes</a>
             <h6 class="collapse-header">Usuarios:</h6>
             <a class="collapse-item" href="#">Professores</a>
