Corrigido ícone do administrador, e menu de cadastro de Pessoas, adicionado tela do Aluno Igor, cadastroProcessos

--- a/PROJETO-NPJ-FRONT/usuario.html
+++ b/PROJETO-NPJ-FRONT/usuario.html
@@ -66,12 +66,10 @@
         <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionSidebar">
           <div class="bg-white py-2 collapse-inner rounded">
             <h6 class="collapse-header">Processos:</h6>
-            <a class="collapse-item" href="cadastro-processos.html">Processos</a>
+            <a class="collapse-item" href="cadastroProcessos.html">Processos</a>
             <a class="collapse-item" href="#">Clientes</a>
             <h6 class="collapse-header">Usuarios:</h6>
-            <a class="collapse-item" href="#">Professores</a>
-            <a class="collapse-item" href="#">Alunos</a>
-            <a class="collapse-item" href="usuario.html">Usuários</a>
+            <a class="collapse-item" href="usuario.html">Pessoas</a>
           </div>
         </div>
       </li>
@@ -84,7 +82,7 @@
         </a>
         <div id="collapseUtilities" class="collapse" aria-labelledby="headingUtilities" data-parent="#accordionSidebar">
           <div class="bg-white py-2 collapse-inner rounded">
-            <h6 class="collapse-header">Custom Utilities:</h6>
+            <h6 class="collapse-header">Algumas Utilidades:</h6>
             <a class="collapse-item" href="utilities-color.html">Consultar Processos</a>
             <a class="collapse-item" href="utilities-border.html">Consultar Clientes</a>
             <a class="collapse-item" href="utilities-animation.html">Relatórios</a>
@@ -278,7 +276,7 @@
                 <li class="nav-item dropdown no-arrow">
                   <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                     <span class="mr-2 d-none d-lg-inline text-gray-600 small">Adminstrador</span>
-                    <img class="img-profile rounded-circle" src="https://icons.iconarchive.com/icons/icons8/ios7/256/Users-Administrator-icon.png">
+                    <img class="img-profile rounded-circle" src="img/user-tie-solid.svg">
                   </a>
                   <!-- Dropdown - User Information -->
                   <div class="dropdown-menu dropdown-menu-right shadow animated--grow-in" aria-labelledby="userDropdown">
