--- a/PROJETO-NPJ-FRONT/blank.html
+++ b/PROJETO-NPJ-FRONT/blank.html
@@ -42,7 +42,7 @@
       <!-- Nav Item - Dashboard -->
       <li class="nav-item">
         <a class="nav-link" href="index.html">
-          <i class="fas fa-fw fa-tachometer-alt"></i>
+          <i class="fas fa-chalkboard-teacher"></i>
           <span>Painel de Processos</span></a>
       </li>
 
@@ -64,12 +64,10 @@
         <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionSidebar">
           <div class="bg-white py-2 collapse-inner rounded">
             <h6 class="collapse-header">Processos:</h6>
-            <a class="collapse-item" href="cadastro-processos.html">Processos</a>
+            <a class="collapse-item" href="cadastroProcessos.html">Processos</a>
             <a class="collapse-item" href="#">Clientes</a>
             <h6 class="collapse-header">Usuarios:</h6>
-            <a class="collapse-item" href="#">Professores</a>
-            <a class="collapse-item" href="#">Alunos</a>
-            <a class="collapse-item" href="usuario.html">Usuários</a>
+            <a class="collapse-item" href="usuario.html">Pessoas</a>
           </div>
         </div>
       </li>
@@ -266,7 +264,7 @@
             <li class="nav-item dropdown no-arrow">
               <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 <span class="mr-2 d-none d-lg-inline text-gray-600 small">Adminstrador</span>
-                <img class="img-profile rounded-circle" src="https://icons.iconarchive.com/icons/icons8/ios7/256/Users-Administrator-icon.png">
+                <img class="img-profile rounded-circle" src="img/user-tie-solid.svg">
               </a>
               <!-- Dropdown - User Information -->
               <div class="dropdown-menu dropdown-menu-right shadow animated--grow-in" aria-labelledby="userDropdown">
