--- a/PROJETO-NPJ-FRONT/cadastroProcessos.html
+++ b/PROJETO-NPJ-FRONT/cadastroProcessos.html
@@ -33,7 +33,7 @@
       <!-- Sidebar - Brand -->
       <a class="sidebar-brand d-flex align-items-center justify-content-center" href="index.html">
         <div class="sidebar-brand-icon rotate-n-15">
-          <i class="fas fa-laugh-wink"></i>
+          <i class="fas fa-graduation-cap"></i>
         </div>
         <div class="sidebar-brand-text mx-3">UNOPAR <sub>NPJ</sup></div>
       </a>
@@ -44,8 +44,8 @@
       <!-- Nav Item - Dashboard -->
       <li class="nav-item">
         <a class="nav-link" href="index.html">
-          <i class="fas fa-fw fa-tachometer-alt"></i>
-          <span>Dashboard</span></a>
+          <i class="fas fa-chalkboard-teacher"></i>
+          <span>Painel de Processos</span></a>
       </li>
 
       <!-- Divider -->
@@ -66,12 +66,10 @@
         <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionSidebar">
           <div class="bg-white py-2 collapse-inner rounded">
             <h6 class="collapse-header">Processos:</h6>
-            <a class="collapse-item" href="#">Processos</a>
+            <a class="collapse-item" href="cadastroProcessos.html">Processos</a>
             <a class="collapse-item" href="#">Clientes</a>
-            <h6 class="collapse-header">Processos:</h6>
-            <a class="collapse-item" href="#">Professores</a>
-            <a class="collapse-item" href="#">Alunos</a>
-            <a class="collapse-item" href="usuario.html">Usuários</a>
+            <h6 class="collapse-header">Usuários:</h6>
+            <a class="collapse-item" href="usuario.html">Pessoas</a>
           </div>
         </div>
       </li>
@@ -81,15 +79,15 @@
         <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseUtilities"
           aria-expanded="true" aria-controls="collapseUtilities">
           <i class="fas fa-fw fa-wrench"></i>
-          <span>Utilities</span>
+          <span>Utilidades</span>
         </a>
         <div id="collapseUtilities" class="collapse" aria-labelledby="headingUtilities" data-parent="#accordionSidebar">
           <div class="bg-white py-2 collapse-inner rounded">
-            <h6 class="collapse-header">Custom Utilities:</h6>
-            <a class="collapse-item" href="utilities-color.html">Colors</a>
-            <a class="collapse-item" href="utilities-border.html">Borders</a>
-            <a class="collapse-item" href="utilities-animation.html">Animations</a>
-            <a class="collapse-item" href="utilities-other.html">Other</a>
+            <h6 class="collapse-header">Algumas Utilidades:</h6>
+            <a class="collapse-item" href="utilities-color.html">Consultar Processos</a>
+            <a class="collapse-item" href="utilities-border.html">Consultar Clientes</a>
+            <a class="collapse-item" href="utilities-animation.html">Relatórios</a>
+            <a class="collapse-item" href="utilities-other.html">Modelos de Documentos</a>
           </div>
         </div>
       </li>
@@ -101,20 +99,12 @@
       <div class="sidebar-heading">
         Addons
       </div>
-   
-
-      <!-- Nav Item - Charts -->
-      <li class="nav-item">
-        <a class="nav-link" href="charts.html">
-          <i class="fas fa-fw fa-chart-area"></i>
-          <span>Charts</span></a>
-      </li>
 
       <!-- Nav Item - Tables -->
       <li class="nav-item">
         <a class="nav-link" href="tables.html">
-          <i class="fas fa-fw fa-table"></i>
-          <span>Tables</span></a>
+          <i class="far fa-calendar-alt"></i>
+          <span>Agenda</span></a>
       </li>
 
       <!-- Divider -->
@@ -284,35 +274,31 @@
             <div class="topbar-divider d-none d-sm-block"></div>
 
             <!-- Nav Item - User Information -->
+            <!-- Nav Item - User Information -->
             <li class="nav-item dropdown no-arrow">
-              <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button" data-toggle="dropdown"
-                aria-haspopup="true" aria-expanded="false">
-                <span class="mr-2 d-none d-lg-inline text-gray-600 small">Valerie Luna</span>
-                <img class="img-profile rounded-circle" src="https://source.unsplash.com/QAB-WJcbgJk/60x60">
+              <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                <span class="mr-2 d-none d-lg-inline text-gray-600 small">Adminstrador</span>
+                <img class="img-profile rounded-circle" src="img/user-tie-solid.svg">
               </a>
               <!-- Dropdown - User Information -->
               <div class="dropdown-menu dropdown-menu-right shadow animated--grow-in" aria-labelledby="userDropdown">
                 <a class="dropdown-item" href="#">
                   <i class="fas fa-user fa-sm fa-fw mr-2 text-gray-400"></i>
-                  Profile
+                  Perfil
                 </a>
                 <a class="dropdown-item" href="#">
                   <i class="fas fa-cogs fa-sm fa-fw mr-2 text-gray-400"></i>
-                  Settings
-                </a>
-                <a class="dropdown-item" href="#">
-                  <i class="fas fa-list fa-sm fa-fw mr-2 text-gray-400"></i>
-                  Activity Log
+                  Configurações
                 </a>
                 <div class="dropdown-divider"></div>
                 <a class="dropdown-item" href="#" data-toggle="modal" data-target="#logoutModal">
                   <i class="fas fa-sign-out-alt fa-sm fa-fw mr-2 text-gray-400"></i>
-                  Logout
+                  Sair
                 </a>
               </div>
             </li>
+      </ul>
 
-          </ul>
 
         </nav>
         <!-- End of Topbar -->
@@ -322,40 +308,52 @@
         <div class="container-fluid">
 
           <div class="d-sm-flex align-items-center justify-content-center  ">
-            <h1 class="h4 mb-0 text-gray-800">Igor está construindo essa parte</h1>
+            <h1 class="h4 mb-0 text-gray-800">Cadastro de Processos</h1>
           </div>
+          <div style="font-size: x-small">Informações do Cliente</div>
 
           <form name="empresa" action="#" class="radius" method="post">
 
             <div class="form-group row was-validated ">
-              <div class="col-sm-12 col-md-6">
-                <span class="first_title">Nome</span>
-                <input type="text" class="form-control form-control-user" id="nome" autocomplete="off" 
-                onkeyup="this.value = this.value.toUpperCase();" required>
-              </div>
-
-              <div class=" col-sm-12 col-md-6"">
-                  <span class=" first_title">Sobrenome</span>
-                <input type="text" class="form-control form-control-user" id="sobrenome" autocomplete="off" 
-                onkeyup="this.value = this.value.toUpperCase();" required>
+              <div class=" col-sm-12 col-md-12"">
+                <span class=" first_title">Nome</span>
+                <input type="text" class="form-control form-control-user" id="cpf" autocomplete="off" required>
               </div>
 
               <div class=" col-sm-12 col-md-12"">
                 <span class=" first_title">CPF</span>
                 <input type="number" class="form-control form-control-user" id="cpf" autocomplete="off" required>
               </div>
-
-              <div class=" col-sm-12 col-md-6"">
-              <span class=" first_title">Senha</span>
-                <input type="password" class="form-control form-control-user" id="senha" autocomplete="off" required>
+              <div class=" col-sm-12 col-md-12"">
+                <span class=" first_title">Usuário do Cadastro </span>
+                <input type="text" class="form-control form-control-user" id="cpf" autocomplete="off  col-sm-12 col-md-12" required>
               </div>
+              <div class=" col-sm-12 col-md-12"">
+              <span class=" first_title">Processos </span>
+               <div class="input-group mb-12" size = 100>
+               </div>
 
-              <div class=" col-sm-12 col-md-6"">
-            <span class=" first_title">Repita a Senha</span>
-                <input type="password" class="form-control form-control-user" id="rsenha" autocomplete="off" required>
+                <select class="custom-select" id="inputGroupSelect01 col-sm-12 col-md-12" required >
+                  <option value="1">ACP - Ação Civil Pública</option>
+                  <option value="2">ACum - Ação de Cumprimento</option>
+                  <option value="3">AI - Agrave de Instrumento</option>
+                  <option value="4">Atent - ATentado</option>
+                  <option value="5">RTAIç - Ação Trabalhista - Rito Súmario</option>      
+                  <option value="6">RTOrd - Ação Trabalhisto - Rito</option>
+                  <option value="7">RTPosse - Reintegração/Manutenção</option>
+                  <option value="8">RTSum - Ação Trabalhista - Rito</option>
+                  <option value="9">Seques - Sequestro</option>
+                </select>
               </div>
-            </br>
+              <div> 
+
+              <p></p>
+              
+              <input type="image" src="https://image.flaticon.com/icons/svg/136/136522.svg"  height="45" width="60" style="position: relative; left:450% "> 
+              </div>
               <div class="btn btn-block" >
+                <br>
+                <P>Adicionar Documento PDF</P>
                 <button type="submit" class="btn btn-primary btn-user btn-block" id='botao'>
                   Salvar
                 </button>
@@ -389,20 +387,19 @@
   </a>
 
   <!-- Logout Modal-->
-  <div class="modal fade" id="logoutModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
-    aria-hidden="true">
+  <div class="modal fade" id="logoutModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog" role="document">
       <div class="modal-content">
         <div class="modal-header">
-          <h5 class="modal-title" id="exampleModalLabel">Ready to Leave?</h5>
+          <h5 class="modal-title" id="exampleModalLabel">Deseja realmente sair?</h5>
           <button class="close" type="button" data-dismiss="modal" aria-label="Close">
             <span aria-hidden="true">×</span>
           </button>
         </div>
-        <div class="modal-body">Select "Logout" below if you are ready to end your current session.</div>
+        <div class="modal-body">Selecione "Sair" se você quer encerrar a sessão.</div>
         <div class="modal-footer">
-          <button class="btn btn-secondary" type="button" data-dismiss="modal">Cancel</button>
-          <a class="btn btn-primary" href="login.html">Logout</a>
+          <button class="btn btn-secondary" type="button" data-dismiss="modal">Cancelar</button>
+          <a class="btn btn-primary" href="login.html">Sair</a>
         </div>
       </div>
     </div>
