Adicionado as telas de cadastro de clientes, Modelos de Documentos, corrigido alguns links das páginas

--- a/PROJETO-NPJ-FRONT/blank.html
+++ b/PROJETO-NPJ-FRONT/blank.html
@@ -65,7 +65,7 @@
           <div class="bg-white py-2 collapse-inner rounded">
             <h6 class="collapse-header">Processos:</h6>
             <a class="collapse-item" href="cadastroProcessos.html">Processos</a>
-            <a class="collapse-item" href="#">Clientes</a>
+            <a class="collapse-item" href="cadastroCliente.html">Clientes</a>
             <h6 class="collapse-header">Usuarios:</h6>
             <a class="collapse-item" href="usuario.html">Pessoas</a>
           </div>
@@ -81,10 +81,10 @@
         <div id="collapseUtilities" class="collapse" aria-labelledby="headingUtilities" data-parent="#accordionSidebar">
           <div class="bg-white py-2 collapse-inner rounded">
             <h6 class="collapse-header">Custom Utilities:</h6>
-            <a class="collapse-item" href="utilities-color.html">Consultar Processos</a>
+            <a class="collapse-item" href="consultaProcessos.html">Consultar Processos</a>
             <a class="collapse-item" href="utilities-border.html">Consultar Clientes</a>
             <a class="collapse-item" href="utilities-animation.html">Relatórios</a>
-            <a class="collapse-item" href="utilities-other.html">Modelos de Documentos</a>
+            <a class="collapse-item" href="modeloDocumentos.html">Modelos de Documentos</a>
           </div>
         </div>
       </li>
