Adicionado as telas, agenda e esqueci minha senha, criadas pelo aluno Rodrigo

--- a/PROJETO-NPJ-FRONT/confirmar-codigo.html
+++ b/PROJETO-NPJ-FRONT/confirmar-codigo.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="en">
 
 <head>
 
@@ -7,9 +7,9 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="description" content="">
-  <meta name="author" content="Unopar Giovani">
+  <meta name="author" content="">
 
-  <title>NPJ - App</title>
+  <title>Esqueçi minha senha</title>
 
   <!-- Custom fonts for this template-->
   <link href="vendor/fontawesome-free/css/all.css" rel="stylesheet" type="text/css">
@@ -33,33 +33,26 @@
           <div class="card-body p-0">
             <!-- Nested Row within Card Body -->
             <div class="row">
-              <div class="col-lg-6 d-none d-lg-block bg-login-image"></div>
+              <div class="col-lg-6 d-none d-lg-block bg-password-image"></div>
               <div class="col-lg-6">
                 <div class="p-5">
                   <div class="text-center">
-                    <h6 class="h4 text-gray-900 mb-4">BEM VINDO !</h6>
+                    <h1 class="h4 text-gray-900 mb-2">Confirmar Redefinição</h1>
+                    <p class="mb-4">Digite o código de verificação, enviado para seu E-mail.</p>
                   </div>
                   <form class="user">
                     <div class="form-group">
-                      <input type="email" class="form-control form-control-user" id="exampleInputEmail" aria-describedby="emailHelp" placeholder="Entre com CPF ou Usuario...">
+                      <input type="tel" class="form-control form-control-user" id="exampleInputnumber" aria-describedby="telHelp" placeholder="Digite o código de verificação...">
                     </div>
-                    <div class="form-group">
-                      <input type="password" class="form-control form-control-user" id="exampleInputPassword" placeholder="Senha">
-                    </div>
-                    <div class="form-group">
-                      <div class="custom-control custom-checkbox small">
-                        <input type="checkbox" class="custom-control-input" id="customCheck">
-                        <label class="custom-control-label" for="customCheck">Lembrar</label>
-                      </div>
-                    </div>
-                    <a href="index.html" class="btn btn-primary btn-user btn-block">
-                      Entrar
+                    <a href="digite-nova-senha.html" class="btn btn-primary btn-user btn-block">
+                      Enviar
                     </a>
-                    <hr>
                   </form>
-                  
+                  <hr>
                   <div class="text-center">
-                    <a class="small" href="esqueci-minha_senha.html">Esqueceu sua senha?</a>
+                  </div>
+                  <div class="text-center">
+                    <a class="small" href="login.html">Conecte-se a sua conta!</a>
                   </div>
                 </div>
               </div>
@@ -74,14 +67,14 @@
   </div>
 
   <!-- Bootstrap core JavaScript-->
-  <script src="vendor/jquery/jquery.js"></script>
-  <script src="vendor/bootstrap/js/bootstrap.bundle.js"></script>
+  <script src="vendor/jquery/jquery.min.js"></script>
+  <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 
   <!-- Core plugin JavaScript-->
-  <script src="vendor/jquery-easing/jquery.easing.js"></script>
+  <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
 
   <!-- Custom scripts for all pages-->
-  <script src="js/sb-admin-2.js"></script>
+  <script src="js/sb-admin-2.min.js"></script>
 
 </body>
 
