--- a/PROJETO-NPJ-FRONT/cadastroProcessos.html
+++ b/PROJETO-NPJ-FRONT/cadastroProcessos.html
@@ -102,7 +102,7 @@
 
       <!-- Nav Item - Tables -->
       <li class="nav-item">
-        <a class="nav-link" href="tables.html">
+        <a class="nav-link" href="agenda.html">
           <i class="far fa-calendar-alt"></i>
           <span>Agenda</span></a>
       </li>
