Foi adicionado as duas telas, 'busca-relatorio' e 'relatorios-encontrados', criadas pelo aluno Mateus

--- a/PROJETO-NPJ-FRONT/cadastroProcessos.html
+++ b/PROJETO-NPJ-FRONT/cadastroProcessos.html
@@ -315,20 +315,20 @@
           <form name="empresa" action="#" class="radius" method="post">
 
             <div class="form-group row was-validated ">
-              <div class=" col-sm-12 col-md-12"">
+              <div class=" col-sm-12 col-md-12">
                 <span class=" first_title">Nome</span>
                 <input type="text" class="form-control form-control-user" id="cpf" autocomplete="off" required>
               </div>
 
-              <div class=" col-sm-12 col-md-12"">
+              <div class=" col-sm-12 col-md-12">
                 <span class=" first_title">CPF</span>
                 <input type="number" class="form-control form-control-user" id="cpf" autocomplete="off" required>
               </div>
-              <div class=" col-sm-12 col-md-12"">
+              <div class=" col-sm-12 col-md-12">
                 <span class=" first_title">Usuário do Cadastro </span>
                 <input type="text" class="form-control form-control-user" id="cpf" autocomplete="off  col-sm-12 col-md-12" required>
               </div>
-              <div class=" col-sm-12 col-md-12"">
+              <div class=" col-sm-12 col-md-12">
               <span class=" first_title">Processos </span>
                <div class="input-group mb-12" size = 100>
                </div>
