--- a/PROJETO-NPJ-FRONT/index.html
+++ b/PROJETO-NPJ-FRONT/index.html
@@ -83,7 +83,7 @@
             <h6 class="collapse-header">Algumas Utilidades:</h6>
             <a class="collapse-item" href="consultaProcessos.html">Consultar Processos</a>
             <a class="collapse-item" href="utilities-border.html">Consultar Clientes</a>
-            <a class="collapse-item" href="utilities-animation.html">Relatórios</a>
+            <a class="collapse-item" href="busca-relatorios.html">Relatórios</a>
             <a class="collapse-item" href="modeloDocumentos.html">Modelos de Documentos</a>
           </div>
         </div>
