--- a/PROJETO-NPJ-FRONT/cadastroCliente.html
+++ b/PROJETO-NPJ-FRONT/cadastroCliente.html
@@ -22,87 +22,92 @@
 
 <body id="page-top">
 
-  <!-- Page Wrapper -->
-  <div id="wrapper">
+ <!-- Page Wrapper -->
+ <div id="wrapper">
 
-    <!-- Sidebar -->
-    <ul class="navbar-nav bg-gradient-primary sidebar sidebar-dark accordion" id="accordionSidebar">
+  <!-- Sidebar -->
+  <ul class="navbar-nav bg-gradient-primary sidebar sidebar-dark accordion" id="accordionSidebar">
 
-       <!-- Sidebar - Brand -->
-       <a class="sidebar-brand d-flex align-items-center justify-content-center" href="index.html">
-        <div class="sidebar-brand-icon rotate-n-15">
-          <i class="fas fa-graduation-cap"></i>
-        </div>
-        <div class="sidebar-brand-text mx-3">UNOPAR <sup>NPJ</sup></div>
+    <!-- Sidebar - Brand -->
+    <a class="sidebar-brand d-flex align-items-center justify-content-center" href="index.html">
+      <div class="sidebar-brand-icon rotate-n-15">
+        <i class="fas fa-graduation-cap"></i>
+      </div>
+      <div class="sidebar-brand-text mx-3">UNOPAR <sup>NPJ</sup></div>
+    </a>
+
+    <!-- Divider -->
+    <hr class="sidebar-divider my-0">
+
+    <!-- Nav Item - Dashboard -->
+    <li class="nav-item active">
+      <a class="nav-link" href="index.html">
+        <i class="fas fa-chalkboard-teacher"></i>
+        <span>Painel de Processos</span></a>
+    </li>
+
+    <!-- Divider -->
+    <hr class="sidebar-divider">
+
+    <!-- Heading -->
+    <div class="sidebar-heading">
+      Menus
+    </div>
+
+    <!-- Nav Item - Pages Collapse Menu -->
+    <li class="nav-item">
+      <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="true"
+        aria-controls="collapseTwo">
+        <i class="far fa-sticky-note"></i>
+        <span>Cadastros</span>
       </a>
-
-      <!-- Divider -->
-      <hr class="sidebar-divider my-0">
-
-      <!-- Nav Item - Dashboard -->
-      <li class="nav-item">
-        <a class="nav-link" href="index.html">
-          <i class="fas fa-chalkboard-teacher"></i>
-          <span>Painel de Processos</span></a>
-      </li>
-
-      <!-- Divider -->
-      <hr class="sidebar-divider">
-
-      <!-- Heading -->
-      <div class="sidebar-heading">
-        Interface
-      </div>
-
-      <!-- Nav Item - Pages Collapse Menu -->
-      <li class="nav-item">
-        <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="true"
-          aria-controls="collapseTwo">
-          <i class="far fa-sticky-note"></i>
-          <span>Cadastro</span>
-        </a>
-        <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionSidebar">
-          <div class="bg-white py-2 collapse-inner rounded">
-            <h6 class="collapse-header">Processos:</h6>
-            <a class="collapse-item" href="cadastroProcessos.html">Processos</a>
-            <a class="collapse-item" href="cadastroCliente.html">Clientes</a>
-            <h6 class="collapse-header">Usuarios:</h6>
-            <a class="collapse-item" href="usuario.html">Pessoas</a>
-          </div>
+      <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionSidebar">
+        <div class="bg-white py-2 collapse-inner rounded">
+          <a class="collapse-item" href="cadastroProcessos.html">Processos</a>
+          <a class="collapse-item" href="cadastroCliente.html">Clientes</a>
+          <a class="collapse-item" href="usuario.html">Usuários do Sistema</a>
         </div>
-      </li>
-
-      <!-- Nav Item - Utilities Collapse Menu -->
-      <li class="nav-item">
-        <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseUtilities" aria-expanded="true" aria-controls="collapseUtilities">
-          <i class="fas fa-fw fa-wrench"></i>
-          <span>Utilidades</span>
-        </a>
-        <div id="collapseUtilities" class="collapse" aria-labelledby="headingUtilities" data-parent="#accordionSidebar">
-          <div class="bg-white py-2 collapse-inner rounded">
-            <h6 class="collapse-header">Custom Utilities:</h6>
-            <a class="collapse-item" href="consultaProcessos.html">Consultar Processos</a>
-            <a class="collapse-item" href="utilities-border.html">Consultar Clientes</a>
-            <a class="collapse-item" href="utilities-animation.html">Relatórios</a>
-            <a class="collapse-item" href="modeloDocumentos.html">Modelos de Documentos</a>
-          </div>
-        </div>
-      </li>
-
-      <!-- Divider -->
-      <hr class="sidebar-divider">
-
-      <!-- Heading -->
-      <div class="sidebar-heading">
-        Addons
       </div>
-     
-      <!-- Nav Item - Tables -->
-      <li class="nav-item">
-        <a class="nav-link" href="agenda.html">
-          <i class="far fa-calendar-alt"></i>
-          <span>Agenda</span></a>
-      </li>
+    </li>
+
+    <li class="nav-item">
+      <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true"
+        aria-controls="collapseOne">
+        <i class="fas fa-search"></i>
+        <span>Consultas</span>
+      </a>
+      <div id="collapseOne" class="collapse" aria-labelledby="headingOne" data-parent="#accordionSidebar">
+        <div class="bg-white py-2 collapse-inner rounded">
+          <a class="collapse-item" href="consultaProcessos.html">Processos</a>
+          <a class="collapse-item" href="#">Clientes</a>
+          <a class="collapse-item" href="#">Usuários do Sistema</a>
+        </div>
+      </div>
+    </li>
+
+    <!-- Nav Item - Utilities Collapse Menu -->
+    <li class="nav-item">
+      <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseUtilities" aria-expanded="true" aria-controls="collapseUtilities">
+        <i class="fas fa-fw fa-wrench"></i>
+        <span>Utilidades</span>
+      </a>
+      <div id="collapseUtilities" class="collapse" aria-labelledby="headingUtilities" data-parent="#accordionSidebar">
+        <div class="bg-white py-2 collapse-inner rounded">
+          <a class="collapse-item" href="busca-relatorios.html">Relatórios</a>
+          <a class="collapse-item" href="modeloDocumentos.html">Modelos de Documentos</a>
+        </div>
+      </div>
+    </li>
+
+    <!-- Divider -->
+    <hr class="sidebar-divider">
+   
+    <!-- Nav Item - Tables -->
+    <li class="nav-item">
+      <a class="nav-link" href="agenda.html">
+        <i class="far fa-calendar-alt"></i>
+        <span>Agenda</span></a>
+    </li>
 
       <!-- Divider -->
       <hr class="sidebar-divider">
