--- a/PROJETO-NPJ-FRONT/usuario.html
+++ b/PROJETO-NPJ-FRONT/usuario.html
@@ -29,7 +29,7 @@
 
     <!-- Sidebar -->
     <ul class="navbar-nav bg-gradient-primary sidebar sidebar-dark accordion" id="accordionSidebar">
-
+  
       <!-- Sidebar - Brand -->
       <a class="sidebar-brand d-flex align-items-center justify-content-center" href="index.html">
         <div class="sidebar-brand-icon rotate-n-15">
@@ -37,43 +37,56 @@
         </div>
         <div class="sidebar-brand-text mx-3">UNOPAR <sup>NPJ</sup></div>
       </a>
-
+  
       <!-- Divider -->
       <hr class="sidebar-divider my-0">
-
+  
       <!-- Nav Item - Dashboard -->
       <li class="nav-item active">
         <a class="nav-link" href="index.html">
           <i class="fas fa-chalkboard-teacher"></i>
           <span>Painel de Processos</span></a>
       </li>
-
+  
       <!-- Divider -->
       <hr class="sidebar-divider">
-
+  
       <!-- Heading -->
       <div class="sidebar-heading">
-        Interface
+        Menus
       </div>
-
+  
       <!-- Nav Item - Pages Collapse Menu -->
       <li class="nav-item">
         <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="true"
           aria-controls="collapseTwo">
           <i class="far fa-sticky-note"></i>
-          <span>Cadastro</span>
+          <span>Cadastros</span>
         </a>
         <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionSidebar">
           <div class="bg-white py-2 collapse-inner rounded">
-            <h6 class="collapse-header">Processos:</h6>
             <a class="collapse-item" href="cadastroProcessos.html">Processos</a>
             <a class="collapse-item" href="cadastroCliente.html">Clientes</a>
-            <h6 class="collapse-header">Usuarios:</h6>
-            <a class="collapse-item" href="usuario.html">Pessoas</a>
+            <a class="collapse-item" href="usuario.html">Usuários do Sistema</a>
           </div>
         </div>
       </li>
-
+  
+      <li class="nav-item">
+        <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true"
+          aria-controls="collapseOne">
+          <i class="fas fa-search"></i>
+          <span>Consultas</span>
+        </a>
+        <div id="collapseOne" class="collapse" aria-labelledby="headingOne" data-parent="#accordionSidebar">
+          <div class="bg-white py-2 collapse-inner rounded">
+            <a class="collapse-item" href="consultaProcessos.html">Processos</a>
+            <a class="collapse-item" href="#">Clientes</a>
+            <a class="collapse-item" href="#">Usuários do Sistema</a>
+          </div>
+        </div>
+      </li>
+  
       <!-- Nav Item - Utilities Collapse Menu -->
       <li class="nav-item">
         <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseUtilities" aria-expanded="true" aria-controls="collapseUtilities">
@@ -82,22 +95,14 @@
         </a>
         <div id="collapseUtilities" class="collapse" aria-labelledby="headingUtilities" data-parent="#accordionSidebar">
           <div class="bg-white py-2 collapse-inner rounded">
-            <h6 class="collapse-header">Algumas Utilidades:</h6>
-            <a class="collapse-item" href="consultaProcessos.html">Consultar Processos</a>
-            <a class="collapse-item" href="utilities-border.html">Consultar Clientes</a>
-            <a class="collapse-item" href="utilities-animation.html">Relatórios</a>
+            <a class="collapse-item" href="busca-relatorios.html">Relatórios</a>
             <a class="collapse-item" href="modeloDocumentos.html">Modelos de Documentos</a>
           </div>
         </div>
       </li>
-
+  
       <!-- Divider -->
       <hr class="sidebar-divider">
-
-      <!-- Heading -->
-      <div class="sidebar-heading">
-        Addons
-      </div>
      
       <!-- Nav Item - Tables -->
       <li class="nav-item">
